Fix leaderboard button overlapping scores

--- a/style.css
+++ b/style.css
@@ -414,7 +414,6 @@ button {
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  z-index: 1;
 }
 
 .leaderboard {
